js_errors.txt
--- Error in temp_check_creator_portal.html_11.js ---
node:internal/modules/cjs/loader:1424
  throw err;
  ^

Error: Cannot find module 'C:\Users\one\.gemini\antigravity\playground\twilight-parsec\temp_check_creator_portal.html_11.js'
    at node:internal/modules/cjs/loader:1421:15
    at node:internal/main/check_syntax:33:20 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v24.13.0


HTML SCRIPT ERRORS:
--- Error in index.html (script 1) ---
C:\Users\one\.gemini\antigravity\playground\twilight-parsec\temp_check_1.js:3
      "@context": "https://schema.org",
                ^

SyntaxError: Unexpected token ':'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0


--- Error in index.html (script 2) ---
C:\Users\one\.gemini\antigravity\playground\twilight-parsec\temp_check_2.js:3
      "@context": "https://schema.org",
                ^

SyntaxError: Unexpected token ':'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0


--- Error in index.html (script 3) ---
C:\Users\one\.gemini\antigravity\playground\twilight-parsec\temp_check_3.js:3
      "@context": "https://schema.org",
                ^

SyntaxError: Unexpected token ':'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0

